src/main/metadata-excluded/objects/Social_Media_Account__c.object
<CustomObject>
    <description>Social Media Accounts, Weibo, WeChat etc.</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.LastName + &quot; &quot; + Account__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Social Media Accounts</relationshipLabel>
        <relationshipName>Social_Media_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_ID__c</fullName>
        <label>Contact ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nick_Name__c</fullName>
        <description>Social medial account nick name</description>
        <label>Nick Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Weibo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WeChat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Social Media Account</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Social Media Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Media Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>